--- a/src/app/shared/table/table.component.html
+++ b/src/app/shared/table/table.component.html
@@ -28,7 +28,7 @@
         </td>
       </tr>
       <tr *ngIf="!objects">
-        <td colspan="7">Nenhuma objeto encontrado</td>
+        <td colspan="7">Nenhum objeto encontrado</td>
       </tr>
     </tbody>
   </table>
