--- a/src/app/processo/cadastro-processo/cadastro-processo.component.html
+++ b/src/app/processo/cadastro-processo/cadastro-processo.component.html
@@ -14,7 +14,7 @@
       <div class="box-header with-border">
         <div class="row">						
           <div class="col-sm-10">					        
-                <npj-modal-object></npj-modal-object>				        
+                <npj-modal-object (addAssistido)="addAssistidoProcesso($event)"></npj-modal-object>				        
                 <button type="button" class="btn btn-link" data-toggle="modal" data-target="#pesquisaFuncionarioProcessoModal">Professor(a)</button>
                 <button type="button" class="btn btn-link" data-toggle="modal" data-target="#pesquisaDocumentoProcessoModal">Documento</button>
                 <button type="button" class="btn btn-link" data-toggle="modal" data-target="#pesquisaAcaoProcessoModal">Ação</button>
@@ -93,6 +93,14 @@
               <input id="localizacao" type="text" placeholder="Armário 1, Prateleira 2, Processo 3 Ex: (1-2-3)" 
                 size="100" maxlength="100" class="form-control" />
             </div>	            
+          </div>
+          <div class="row">
+            <div class="col-sm-12 form-group">
+              <img src="{{url}}" >						
+              <span class="label  label-default">{{assistido?.nome}}</span>
+              <span class="label  label-default">{{assistido?.pseudonimo}}</span>
+              <span class="label  label-default">{{assistido?.cpf}}</span>
+            </div>							
           </div>
         </div>
 
